--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   - assets/itca.jpg
   - assets/fachada.jpg
   - assets/letras.jpg
+  - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
