--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,13 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_launcher_icons: ^0.8.1  
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/escudo.jpg"  
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -47,7 +54,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/itca.jpg
-  - assets/fachada.jpg
   - assets/images/
   #   - images/a_dot_ham.jpeg
 
